tests/error/type_match/typename_mismatched_qualifier1.bz
function test1(T: const typename);

function test()
{
	test1(*int32);
}
